--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-        <title>My TODOs</title>
+        <title>TODOs</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
     </head>
     <body>
@@ -10,15 +10,46 @@
             <h1></h1>
             <div id="content"></div>
         </div>
+        <script type="text/template" id="tpl-menu">
+            <ul>
+                <li><a href="#">List</a></li>
+                <li><a href="#archive">Archive</a></li>
+                <li class="right"><a href="#new">+</a></li>
+            </ul>
+        </script>
+        <script type="text/template" id="tpl-list-item">
+            <li class="cf done-<%= done %>" data-index="<%= index %>">
+                <h2>
+                    <input type="checkbox" data-status <%= doneChecked %> />
+                    <a href="javascript:void(0);" data-up>&#8593;</a>
+                    <a href="javascript:void(0);" data-down>&#8595;</a>
+                    <%= title %>
+                </h2>
+                <div class="options">
+                    <a href="#edit/<%= index %>">edit</a>
+                    <a href="javascript:void(0);" data-archive><%= archiveLink %></a>
+                    <a href="#delete/<%= index %>">delete</a>
+                </div>
+            </li>
+        </script>
+        <script type="text/template" id="tpl-form">
+            <form>
+                <textarea><%= title %></textarea>
+                <button>save</button>
+            </form>
+        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
         <script src="js/App.js"></script>
+        <script src="js/views/menu.js"></script>
+        <script src="js/views/list.js"></script>
+        <script src="js/views/form.js"></script>
         <script src="js/models/ToDo.js"></script>
         <script src="js/collections/ToDos.js"></script>
         <script>
             window.onload = function() {
-                // bootstrap
+                app.init();
             }
         </script>
     </body>
